[package]
name = "jose-jwt-jwk-rs"
version = "0.1.0"
authors = ["Junichi Kato <j5ik2o@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsa = "0.3.0"
aes = "0.6.0"
ecdsa = "0.10.2"
ed25519 = "1.0.3"
hmac = "0.10.1"
curve25519-dalek = "3.0.2"
once_cell = "1.5.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
